--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ html, body {
 }
 
 .items-panel {
-    background-color: rgb(173, 173, 173);
+    background-color: rgb(230, 230, 230);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -36,6 +36,10 @@ html, body {
     padding: 0px 10px;
     border-radius: 0px 0px 8px 8px;
     width: 100%;
+    -webkit-box-shadow: 0px 10px 16px -1px rgba(21, 43, 60, 0.2);
+    -moz-box-shadow: 0px 10px 16px -1px rgba(21, 43, 60, 0.2);
+    box-shadow: 0px 10px 16px -1px rgba(21, 43, 60, 0.2);
+    z-index: 1000;
 }
 
 .side-bars-and-main-field-holder {
@@ -49,17 +53,15 @@ html, body {
     width: 10px;
     height: 10px;
     border-radius: 10px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(119, 119, 119);
     margin-right: 10px;
 }
 
 .drag-and-drop-item {
-    width: 80px;
-    height: 80px;
     background-color: rgb(119, 119, 119);
     border-radius: 8px;
     color: white;
-    font-size: 2rem;
+    font-size: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -88,8 +90,6 @@ html, body {
 
 /*TODO: work with this class*/
 .main-field-holder {
-    /* width: 4781px;
-    height: 3856px; */
     display: flex;
     position: relative;
     justify-content: center;
@@ -97,7 +97,6 @@ html, body {
     box-sizing: border-box;
     background-color: rgb(206, 206, 206);
     overflow: hidden;
-    
 }
 
 /* .main-field-holder-top {
@@ -129,14 +128,19 @@ html, body {
 }
 
 .div-template {
-    border: 2px solid black;
+    border: solid black;
     background-color: rgb(128, 190, 170);
 }  
 
 .p-template {
-    border: 2px solid rgb(185, 47, 47);
+    border: solid rgb(185, 47, 47);
     background-color: rgb(165, 128, 190);
-}   
+}  
+
+
+.selected-item {
+/* */
+}
 
 /* .field-item:hover {
     cursor: grab;
@@ -357,10 +361,11 @@ html, body {
 .context-panel {
     width: 300px;
     height: 100%;
-    background-color: rgb(173, 173, 173);
+    background-color: rgb(230, 230, 230);
     display: flex;
     align-items: center;
     flex-direction: column;
     box-sizing: border-box;
     padding: 20px 10px 10px 10px;
+    display: none;
 }
