--- a/style.css
+++ b/style.css
@@ -359,13 +359,79 @@ html, body {
 }
 
 .context-panel {
-    width: 300px;
+    width: 350px;
     height: 100%;
     background-color: rgb(230, 230, 230);
     display: flex;
     align-items: center;
     flex-direction: column;
     box-sizing: border-box;
-    padding: 20px 10px 10px 10px;
+    padding: 20px 15px 10px;
     display: none;
+}
+
+/* context panel WIDTH */
+.context-panel-width {
+    width: 100%;
+    /* display: flex; */
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.context-panel-width-label {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 3px;
+}
+
+.context-panel-width-range-and-input-holder {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+#panel_width_range {
+    flex-grow: 1;
+}
+
+#panel_width_input {
+    width: 50px;
+    margin-left: 10px;
+    text-align: center;
+}
+
+/* context panel HEIGHT */
+.context-panel-height {
+    width: 100%;
+    /* display: flex; */
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.context-panel-height-label {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 3px;
+}
+
+.context-panel-height-range-and-input-holder {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+#panel_height_range {
+    flex-grow: 1;
+}
+
+#panel_height_input {
+    width: 50px;
+    margin-left: 10px;
+    text-align: center;
 }
