--- a/1_style.css
+++ b/1_style.css
@@ -58,7 +58,7 @@ html, body {
 }
 
 .drag-and-drop-item {
-    background-color: rgb(119, 119, 119);
+    background-color: hsl(0, 0%, 47%);
     border-radius: 8px;
     color: white;
     font-size: 1.5rem;
@@ -128,13 +128,15 @@ html, body {
 }
 
 .div-template {
-    border: solid black;
-    background-color: rgb(128, 190, 170);
+    border: solid #000000;
+    background-color: #80beaa;
+    box-sizing: border-box;
 }  
 
 .p-template {
-    border: solid rgb(185, 47, 47);
-    background-color: rgb(165, 128, 190);
+    border: solid #b92f2f;
+    background-color: #a580be;
+    box-sizing: border-box;
 }  
 
 
@@ -356,82 +358,4 @@ html, body {
     flex-direction: column;
     padding: 20px 10px 10px 10px;
     box-sizing: border-box;
-}
-
-.context-panel {
-    width: 350px;
-    height: 100%;
-    background-color: rgb(230, 230, 230);
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    box-sizing: border-box;
-    padding: 20px 15px 10px;
-    display: none;
-}
-
-/* context panel WIDTH */
-.context-panel-width {
-    width: 100%;
-    /* display: flex; */
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.context-panel-width-label {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 3px;
-}
-
-.context-panel-width-range-and-input-holder {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-#panel_width_range {
-    flex-grow: 1;
-}
-
-#panel_width_input {
-    width: 50px;
-    margin-left: 10px;
-    text-align: center;
-}
-
-/* context panel HEIGHT */
-.context-panel-height {
-    width: 100%;
-    /* display: flex; */
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.context-panel-height-label {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 3px;
-}
-
-.context-panel-height-range-and-input-holder {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-#panel_height_range {
-    flex-grow: 1;
-}
-
-#panel_height_input {
-    width: 50px;
-    margin-left: 10px;
-    text-align: center;
 }
