--- a/slide_editor_css/3_slides_related_panels.css
+++ b/slide_editor_css/3_slides_related_panels.css
@@ -33,7 +33,7 @@
 }
 
 /* SLIDE PANEL */
-.slides-panel {
+.slides-panel-holder {
     display: flex;
 
     min-width: var(--slidesPanelWidth);
@@ -45,7 +45,34 @@
     flex-direction: column;
     box-sizing: border-box;
     overflow-y: auto;
-    padding: 15px 0px;
+    /* padding: 5px 0px; */
+}
+
+.slides-panel-buttons {
+    height: auto;
+    width: 100%;
+    background-color: rgb(219, 219, 219);
+    padding: 14px 8px 0px 8px;
+    display: flex;
+    justify-content: space-evenly;
+    z-index: 999;
+}
+
+.slides-panel-button {
+    width: 80px;
+}
+
+.slides-panel {
+    display: flex;
+    /* min-width: 100%; */
+    max-width: 100%;
+    margin: 10px 0px;
+    height: 100%;
+    background-color: rgb(219, 219, 219);
+    align-items: center;
+    flex-direction: column;
+    box-sizing: border-box;
+    overflow-y: auto;
 }
 
 .slides-related-panels-buttons-holder {
@@ -56,6 +83,7 @@
     left: 1.5%;
     transform: translate(0, -50%);
 }
+
 
 .slides-related-panels-button {
     background-color: rgb(127, 122, 122);
@@ -95,6 +123,7 @@
 .selected-slide {
     background-color: rgb(180, 180, 180);
     border-radius: 3px;
+    cursor: default;
 }
 
 .main-slide {
