--- a/slide_editor_css/2_context_panel.css
+++ b/slide_editor_css/2_context_panel.css
@@ -14,6 +14,11 @@
     padding: 10px 15px 10px;
     display: var(--display);
     overflow-x: auto;
+    /* z-index: 2000; */
+}
+
+.context-panel * {
+    /* z-index: 9999; */
 }
 
 .context-panel-separator {
@@ -147,4 +152,8 @@
 .anchor-button-activated {
     background-color: rgb(107, 63, 148);
     color: white;
+}
+
+.ck-content {
+    background-color: rgb(214, 214, 214) !important;
 }
