--- a/slide_editor_css/3_slides_related_panels.css
+++ b/slide_editor_css/3_slides_related_panels.css
@@ -1,21 +1,7 @@
 :root {
     --slidesPanelWidth: 250px;
-    --templatesPanelWidth: 345px;
+    --templatesPanelWidth: 250px;
     --imagesPanelWidth: 345px;
-}
-
-.templates-panel {
-    display: none;
-
-    min-width: var(--templatesPanelWidth);
-    max-width: var(--templatesPanelWidth);
-
-    height: 100%;
-    background-color: rgb(173, 173, 173);
-    align-items: center;
-    flex-direction: column;
-    padding: 20px 10px 10px 10px;
-    box-sizing: border-box;
 }
 
 .images-panel {
@@ -34,11 +20,11 @@
 
 /* SLIDE PANEL */
 .slides-panel-holder {
-    display: flex;
-
+    display: none;
+    
     min-width: var(--slidesPanelWidth);
     max-width: var(--slidesPanelWidth);
-
+    
     height: 100%;
     background-color: rgb(219, 219, 219);
     align-items: center;
@@ -64,7 +50,6 @@
 
 .slides-panel {
     display: flex;
-    /* min-width: 100%; */
     max-width: 100%;
     margin: 10px 0px;
     height: 100%;
@@ -164,6 +149,69 @@
 }
 
 .slide-name {
+    font-size: 1.3rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 95%;
+    display: inline-block;
+    word-break: break-word;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+/* TEMPLATE PANEL */
+.templates-panel-holder {
+    display: none;
+
+    min-width: var(--templatesPanelWidth);
+    max-width: var(--templatesPanelWidth);
+
+    height: 100%;
+    background-color: rgb(219, 219, 219);
+    align-items: center;
+    flex-direction: column;
+    box-sizing: border-box;
+    overflow-y: auto;
+}
+
+.templates-panel {
+    display: flex;
+    max-width: 100%;
+    margin: 10px 0px;
+    height: 100%;
+    background-color: rgb(219, 219, 219);
+    align-items: center;
+    flex-direction: column;
+    box-sizing: border-box;
+    overflow-y: auto;
+}
+
+.template {
+    padding: 12px 15px 0px;
+    max-width: 90%;
+    min-width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5px;
+    cursor: pointer;
+}
+
+.template:hover {
+    background-color: rgb(180, 180, 180);
+}
+
+.template-content {
+    width: calc(var(--templatesPanelWidth) - 50px);
+    height: calc(calc(var(--templatesPanelWidth) - 50px) / 1.4);
+    background-color: rgb(255, 255, 255);
+    margin-bottom: 10px;
+    border-radius: 3px;
+    border: 1px solid black;
+    position: relative;
+    overflow: hidden;
+}
+
+.template-name {
     font-size: 1.3rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     width: 95%;
