movement calculating has been reworked

--- a/slide_editor_css/1_style.css
+++ b/slide_editor_css/1_style.css
@@ -158,6 +158,12 @@ html, body {
     position: absolute;
 } 
 
+.href-elem-template {
+    border: solid #000000;
+    box-sizing: border-box;
+    position: absolute;
+} 
+
 .a-template {
 
 }
