done with images and prepeared to async lists rebuild

--- a/slide_editor_css/1_style.css
+++ b/slide_editor_css/1_style.css
@@ -164,6 +164,13 @@ html, body {
     position: absolute;
 } 
 
+.image-elem-template {
+    background-color: #ffffff00;
+    box-sizing: border-box;
+    border: solid #000000;
+    position: absolute;
+} 
+
 .a-template {
 
 }
