--- a/slide_editor_css/3_slides_related_panels.css
+++ b/slide_editor_css/3_slides_related_panels.css
@@ -1,21 +1,7 @@
 :root {
     --slidesPanelWidth: 250px;
     --templatesPanelWidth: 250px;
-    --imagesPanelWidth: 345px;
-}
-
-.images-panel {
-    display: none;
-
-    min-width: var(--imagesPanelWidth);
-    max-width: var(--imagesPanelWidth);
-
-    height: 100%;
-    background-color: rgb(173, 173, 173);
-    align-items: center;
-    flex-direction: column;
-    padding: 20px 10px 10px 10px;
-    box-sizing: border-box;
+    --imagesPanelWidth: 250px;
 }
 
 /* SLIDE PANEL */
@@ -212,6 +198,100 @@
 }
 
 .template-name {
+    font-size: 1.3rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 95%;
+    display: inline-block;
+    word-break: break-word;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+/* IMAGE PANEL */
+.images-panel-holder {
+    display: none;
+
+    min-width: var(--imagesPanelWidth);
+    max-width: var(--imagesPanelWidth);
+
+    height: 100%;
+    background-color: rgb(219, 219, 219);
+    align-items: center;
+    flex-direction: column;
+    box-sizing: border-box;
+    overflow-y: auto;
+}
+
+.images-panel-buttons {
+    height: auto;
+    width: 100%;
+    background-color: rgb(219, 219, 219);
+    padding: 14px 8px 0px 8px;
+    display: flex;
+    justify-content: space-evenly;
+    z-index: 999;
+}
+
+.images-panel {
+    display: flex;
+    max-width: 100%;
+    margin: 10px 0px;
+    height: 100%;
+    background-color: rgb(219, 219, 219);
+    align-items: center;
+    flex-direction: column;
+    box-sizing: border-box;
+    overflow-y: auto;
+}
+
+.image {
+    padding: 12px 15px 0px;
+    max-width: 90%;
+    min-width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5px;
+    cursor: default;
+}
+
+.image:hover {
+    background-color: rgb(180, 180, 180);
+}
+
+.image-content {
+    width: calc(var(--templatesPanelWidth) - 50px);
+    height: auto;
+    background-color: rgb(255, 255, 255);
+    margin-bottom: 10px;
+    border-radius: 3px;
+    border: 1px solid black;
+    position: relative;
+    overflow: hidden;
+}
+
+.image-control-buttons {
+    width: calc(var(--slidesPanelWidth) - 50px);
+    margin-bottom: 9px;
+    background-color: white;
+    height: fit-content;
+    display: flex;
+    justify-content: space-between;
+    padding: 7px;
+    border-radius: 2px;
+    border: 1px solid black;
+}
+
+.image-control-button {
+    width: 45%;
+    padding: 2px 0;
+    border: 1px solid black;
+    border-radius: 2px;
+    background-color: rgb(126, 126, 126);
+    color: white;
+}
+
+.image-name {
     font-size: 1.3rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     width: 95%;
